# EnigmaM4Breaker

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  DOKUMENTACIJA_BHS.md  MANUAL_EN.md  README.md  README_BHS.md  UPUTSTVO_SR.md  build.bat  build.ps1  config.h  crack_u264.cu  enigma_blind.cu  enigma_blind_depth.cu  enigma_breaker.cu  enigma_crib_solver.cu  ioc_diag.cpp
core/enigma_cpu/: enigma_cpu.cpp  enigma_cpu.h  verify_main.cpp  verify_r2_main.cpp
core/enigma_gpu/: brute_r3.cu  brute_r4.cu  brute_r5.cu  brute_r6.cu  enigma_device.cuh
data/: u264_cipher.txt
filters/ioc/: ioc.cpp  ioc.h
filters/quadgram/: quadgram_score.cpp  quadgram_score.h
filters/trigram/: trigram_score.cpp  trigram_score.h
search/plugboard_search/: plug_r7.cpp  plugboard_hc.h
tests/: gen_depth.py
tests/test_messages/: README_test_messages.txt  authentic_U264.txt  gen_messages.py  m4_ciphertexts_only.txt  m4_messages.json  m4_solutions.txt
tests/test_messages_day1/: ciphertexts.txt  messages.json  solution.txt
tests/test_messages_day2/: ciphertexts.txt  messages.json  solution.txt
tests/test_messages_day3/: ciphertexts.txt  messages.json  solution.txt
